[gd_scene load_steps=21 format=3 uid="uid://dh2fs70sp3hs5"]

[ext_resource type="Script" uid="uid://disa0de85n2lt" path="res://Scripts/Ships/Chritmast.gd" id="1_xlj42"]
[ext_resource type="Texture2D" uid="uid://dabj3su1pryp3" path="res://Sprites/ShipSprites/Chritmas/ChritmasSpriteSheet.png" id="2_xlj42"]
[ext_resource type="AudioStream" uid="uid://b7nuxm1ft12ly" path="res://Audio/ShootAudio.mp3" id="5_j712x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xlj42"]
atlas = ExtResource("2_xlj42")
region = Rect2(0, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_e684e"]
atlas = ExtResource("2_xlj42")
region = Rect2(36, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_j712x"]
atlas = ExtResource("2_xlj42")
region = Rect2(72, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3xf2"]
atlas = ExtResource("2_xlj42")
region = Rect2(108, 72, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_db2gj"]
atlas = ExtResource("2_xlj42")
region = Rect2(0, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7pdw"]
atlas = ExtResource("2_xlj42")
region = Rect2(36, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcgn3"]
atlas = ExtResource("2_xlj42")
region = Rect2(72, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iwj8"]
atlas = ExtResource("2_xlj42")
region = Rect2(108, 36, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hsde"]
atlas = ExtResource("2_xlj42")
region = Rect2(0, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwcg6"]
atlas = ExtResource("2_xlj42")
region = Rect2(36, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_thsyt"]
atlas = ExtResource("2_xlj42")
region = Rect2(72, 0, 36, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxyrt"]
atlas = ExtResource("2_xlj42")
region = Rect2(108, 0, 36, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_318x0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlj42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e684e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j712x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3xf2")
}],
"loop": true,
"name": &"MovementLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_db2gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7pdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcgn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iwj8")
}],
"loop": true,
"name": &"MovementRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hsde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwcg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thsyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxyrt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_idj7w"]
radius = 5.510559
height = 16.0

[sub_resource type="Animation" id="Animation_xlj42"]
resource_name = "Explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.56666666, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0), Vector2(0.5, 0), Vector2(0.49445954, 18.999996), Vector2(1.1920929e-07, -619.99994)]
}

[sub_resource type="Animation" id="Animation_4hsde"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pwcg6"]
_data = {
&"Explosion": SubResource("Animation_xlj42"),
&"RESET": SubResource("Animation_4hsde")
}

[node name="PlayerShip" type="CharacterBody2D" groups=["Players"]]
motion_mode = 1
script = ExtResource("1_xlj42")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, 0)
scale = Vector2(1.5321219, 1.5321219)
sprite_frames = SubResource("SpriteFrames_318x0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9.313226e-10, 10)
rotation = -0.008027583
scale = Vector2(1.6346322, 1.9707263)
shape = SubResource("CapsuleShape2D_idj7w")

[node name="BulletSpawn" type="Node2D" parent="."]
position = Vector2(-10, -30.000002)
scale = Vector2(1.5321219, 1.5321219)

[node name="BulletSpawn2" type="Node2D" parent="."]
position = Vector2(11, -30.000002)
scale = Vector2(1.5321219, 1.5321219)

[node name="BulletSpawn3" type="Node2D" parent="."]
position = Vector2(9.536743e-07, -15.000001)
scale = Vector2(1.5321219, 1.5321219)

[node name="ShootCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_j712x")
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
&"": SubResource("AnimationLibrary_pwcg6")
}
